WIP - Code cleanup. Search actions split.